# Taiwan-Stocks

./: MySQL_Database.py  README.md  Stocks.py  Stocks_Analasis.py  Stocks_Crawl.py  Stocks_Draw.py  Taiwan_Stocks.py  crawl.py  database.py  index.html  pyproject.toml  run.py  stocks.py  stocks_analysis.py  stocks_draw.py  taiwan_stocks.py
pictures/: Stocks.html  index.html  stocks.html
taiwan_stocks/: cli.py  config.py  crawl.py  database.py  stock_info.py  stocks_analysis.py  stocks_draw.py  taiwan_stocks.py
