[tool.poetry]
name = "taiwan-stocks"
version = "0.1.0"
description = "This is a simple script for crawling the data from Taiwan stocks market."
authors = ["Dan <asign1022@gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.32.3"
pyyaml = "^6.0.2"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
pymysql = "^1.1.1"
plotly = "^6.0.1"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"   # ✅ dev 工具像是 ruff, pytest, mypy 等放這裡
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taiwan-stocks = "taiwan_stocks.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
